--- a/templates/page.html
+++ b/templates/page.html
@@ -4,7 +4,7 @@
             <img src="img/hrHoWe1Q4mt50HdRrYUT_uCovenantLogoWhite.png" width="45%" height="auto">
         </div>
         <div>
-            <div class="introFont container" style="text-color:white;">
+            <div class="introFont container" style="color:white; font-family:shadowsintolight;">
                 <strong>Welcome to U·Covenant - a contemporary Christian ministry built</strong>
                 <br>
                 <i>By You, For God.</i>
