--- a/css/custom.css
+++ b/css/custom.css
@@ -9,6 +9,8 @@ html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquot
 }
 
 
+
+
 .scroll-wrapper {
 	-webkit-overflow-scrolling: touch;
   	overflow-y: scroll;
@@ -28,6 +30,7 @@ iframe {
         border:none ;
 	margin: 0px 0px 0px 0px;	
 }
+
 .container-fluid {
   padding-right: 0px;
   padding-left: 0px;
@@ -82,4 +85,113 @@ margin-top:5%;
 margin-left: 10%;
 margin-right: 10%;
 font-weight: bold;
+}
+
+
+.bigText{
+font-family:shadowsintolight;
+font-size: 150%;
+overflow:hidden;
+}
+
+.centerPic {
+margin: 0 auto;
+
+margin-bottom: 5px;
+}
+.whiteRowBack {
+background-color:white;
+
+ overflow: hidden;
+
+}
+
+.blueRowBack {
+background-color:#0078a2;
+
+    bottom: 0;
+    left: 0;
+    right: 0;
+	position:relative;
+	color: white;
+	padding-left: 10%;
+	padding-right: 10%;
+	padding-top: 5%;
+	margin-top: -15%;
+	z-index: 2;
+	
+
+
+}
+
+.shadow {
+margin-bottom: -13px;
+height: 15px;
+
+	-webkit-box-shadow: 0px -4px 15px -2px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px -4px 15px -2px rgba(0,0,0,0.75);
+box-shadow: 0px -4px 15px -2px rgba(0,0,0,0.75);
+position:relative;
+}
+
+.arrowLeft{
+ position:fixed;
+    left:0;
+    bottom:60%;
+    margin:0 0 0 5%;
+    padding:0;
+    width:10%;
+}
+
+.arrowRight{
+  position:fixed;
+    right:0;
+    bottom:60%;
+    margin:0 10% 0 0;
+    padding:0;
+    width:10%;	
+}
+
+.signButtons {
+margin-left:10%;
+margin-right:10%;
+}
+
+.signUpButton, a.signUpButton {
+border-style: solid;
+border-width: 5px;
+border-color: white;
+background-color: #800080;
+color:white;
+margin-top:5%;
+font-weight: bold;
+text-align:center;
+padding-bottom: 3px;
+text-decoration: none;
+}
+
+.skipButton, a.skipButton {
+color:white;
+margin-top:5%;
+text-align:center;
+padding-right: 10%; 
+padding-left:10%;
+font-size: medium;
+text-decoration:none;
+}
+
+.bottomFill {
+background-color:#0078a2;
+max-height:100%; 
+min-height: 100%;
+margin-top: -5%;
+z-index: 1;
+}
+
+.phone {
+	margin-top:10%; 
+	margin-bottom: -40%; 
+	overflow:hidden;
+	
+	
 }
