--- a/css/custom.css
+++ b/css/custom.css
@@ -170,7 +170,7 @@ padding-bottom: 3px;
 text-decoration: none;
 }
 
-.skipButton, a.skipButton {
+.skipButton, a.skipButton, button.skipButton {
 color:white;
 margin-top:5%;
 text-align:center;
@@ -178,6 +178,8 @@ padding-right: 10%;
 padding-left:10%;
 font-size: medium;
 text-decoration:none;
+background-color: rgba(0,0,0,0);
+border-color: rgba(0,0,0,0);
 }
 
 .bottomFill {
